# ComfyUI_CheckPointLoader_Ext

./: CheckPointInfo.py  CheckpointLoaderExt.py  README.md  __init__.py  pyproject.toml
js/: cle.js
web/: index.html
web/assets/: AboutView-BKaWcOrk.js  index-BPhrI0_F.js  index-CnSRyO2e.js
